# iqrextensions

./: README.md  README.md~
Modules/Arduino/: .gitignore  AnalogArduinotest.iqr  CMakeLists.txt  README  SerialInterfaceThreading.ino  arduino.cc  arduino.h  moduleArduinoAnalog.cpp  moduleArduinoAnalog.hpp
Modules/Arduino/.svn/: all-wcprops  entries
Modules/Arduino/.svn/text-base/: CMakeLists.txt.svn-base  Makefile.svn-base  README.svn-base  arduino.cc.svn-base  arduino.h.svn-base  moduleArduino.cc.svn-base  moduleArduino.h.svn-base  moduleArduinoAnalog.cpp.svn-base  moduleArduinoAnalog.hpp.svn-base  moduleArduinoNew.cpp.svn-base  moduleArduinoNew.hpp.svn-base  modulearduinoserial.cpp.svn-base  modulearduinoserial.hpp.svn-base  test.iqr.svn-base
Modules/Arduino/.svn/tmp/: CMakeLists.txt.tmp  Makefile.2.tmp  Makefile.tmp  arduino.cc.tmp  modulearduinoserial.cpp.tmp  modulearduinoserial.hpp.tmp  svn-4kZka8  svn-6D1BT3  svn-D5uYF2  svn-gkyYT3  svn-nf6V0f
Modules/Arduino/serialstream/.svn/: all-wcprops  entries
Neurons/: CMakeLists.txt  CMakeLists.txt~  README~  neuronAdaptiveIntegrateFire.cpp  neuronAdaptiveIntegrateFire.hpp  neuronAdaptiveIntegrateFireMod.cpp  neuronAdaptiveIntegrateFireMod.h
Synapses/: CMakeLists.txt  README  README.md  README~  synapseExponential.cpp  synapseExponential.hpp  synapsemodulatefeedback.cpp  synapsemodulatefeedback.h
